Bug 1068384 - Remove legacy code that handled the app menu's update item r=mstange,stefanh a=lmandel